# ved

./: .gitignore  AUDIT.md  CLAUDE.md  README.md  TODO.md  index.html  package-lock.json  package.json
src/: Diff.tsx  Editor.tsx  Sidebar.tsx  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fs.rs  git.rs  lib.rs  main.rs  search.rs  watch.rs
