[package]
name = "companion-ide"
version = "0.1.0"
description = "Companion IDE"
edition = "2021"

[lib]
name = "companion_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
notify = "6"
ignore = "0.4"

