[package]
name = "ved"
version = "0.1.0"
description = "VED — Versioned Editor for Diffs"
edition = "2021"

## No library target; single binary with main.rs

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
notify = "6"
ignore = "0.4"
regex = "1"
